--- a/src/rtv.ipynb
+++ b/src/rtv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,21 +84,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"sg\", \"fbox\"][:4]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:2]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][2:]\n",
     "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
-    "frac_list = [0.5, 0.7, 0.9]"
+    "frac_list = [0.7, 0.9]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../res/rtv_attack/rsd-epinions/200.0-0.7.pkl\n",
+      "../res/rtv_attack/rsd-epinions/300.0-0.7.pkl\n",
+      "../res/rtv_attack/rsd-epinions/300.0-0.9.pkl\n",
+      "../res/rtv_attack/rsd-epinions/400.0-0.9.pkl\n",
+      "../res/rtv_attack/sg-epinions/100.0-0.7.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "attack_res = {\n",
     "    (d, a, b, f): get_results(data_name=d, alg=a, attack_name=\"rtv_attack\", budget=b, frac=f)\n",
@@ -109,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -154,44 +166,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">amazon</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">100.0</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">0.5</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">0.7</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.357513</td>\n",
-       "      <td>0.382199</td>\n",
-       "      <td>0.380682</td>\n",
-       "      <td>0.356250</td>\n",
+       "      <td>0.079254</td>\n",
+       "      <td>0.076923</td>\n",
+       "      <td>0.093702</td>\n",
+       "      <td>0.090909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.650943</td>\n",
-       "      <td>0.657658</td>\n",
-       "      <td>0.638095</td>\n",
-       "      <td>0.575758</td>\n",
+       "      <td>0.280992</td>\n",
+       "      <td>0.228070</td>\n",
+       "      <td>0.255230</td>\n",
+       "      <td>0.270463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.461538</td>\n",
-       "      <td>0.483444</td>\n",
-       "      <td>0.476868</td>\n",
-       "      <td>0.440154</td>\n",
+       "      <td>0.123636</td>\n",
+       "      <td>0.115044</td>\n",
+       "      <td>0.137079</td>\n",
+       "      <td>0.136079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">0.7</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">0.9</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.357513</td>\n",
-       "      <td>0.378947</td>\n",
-       "      <td>0.380682</td>\n",
-       "      <td>0.356250</td>\n",
+       "      <td>0.079254</td>\n",
+       "      <td>0.076923</td>\n",
+       "      <td>0.093702</td>\n",
+       "      <td>0.090909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.584746</td>\n",
-       "      <td>0.585366</td>\n",
-       "      <td>0.572650</td>\n",
-       "      <td>0.513514</td>\n",
+       "      <td>0.255639</td>\n",
+       "      <td>0.213115</td>\n",
+       "      <td>0.243028</td>\n",
+       "      <td>0.259386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -205,65 +217,65 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">epinions</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.7</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.053004</td>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>0.051282</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.008917</td>\n",
+       "      <td>0.006536</td>\n",
+       "      <td>0.009112</td>\n",
+       "      <td>0.007463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.085227</td>\n",
-       "      <td>0.082596</td>\n",
-       "      <td>0.086420</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.004859</td>\n",
+       "      <td>0.003992</td>\n",
+       "      <td>0.005739</td>\n",
+       "      <td>0.004658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.9</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.205882</td>\n",
-       "      <td>0.237288</td>\n",
-       "      <td>0.260000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.003340</td>\n",
+       "      <td>0.002874</td>\n",
+       "      <td>0.004188</td>\n",
+       "      <td>0.003386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.042296</td>\n",
-       "      <td>0.042683</td>\n",
-       "      <td>0.040498</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.008403</td>\n",
+       "      <td>0.005917</td>\n",
+       "      <td>0.008214</td>\n",
+       "      <td>0.006667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.070175</td>\n",
-       "      <td>0.072351</td>\n",
-       "      <td>0.070081</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.004780</td>\n",
+       "      <td>0.003868</td>\n",
+       "      <td>0.005548</td>\n",
+       "      <td>0.004491</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>288 rows × 4 columns</p>\n",
+       "<p>177 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          0         1         2         3\n",
-       "alpha fraudar 100.0 0.5 precision  0.357513  0.382199  0.380682  0.356250\n",
-       "                        recall     0.650943  0.657658  0.638095  0.575758\n",
-       "                        f1         0.461538  0.483444  0.476868  0.440154\n",
-       "                    0.7 precision  0.357513  0.378947  0.380682  0.356250\n",
-       "                        recall     0.584746  0.585366  0.572650  0.513514\n",
-       "...                                     ...       ...       ...       ...\n",
-       "otc   sg      400.0 0.7 recall     0.053004  0.050000  0.051282  0.000000\n",
-       "                        f1         0.085227  0.082596  0.086420  0.000000\n",
-       "                    0.9 precision  0.205882  0.237288  0.260000  0.000000\n",
-       "                        recall     0.042296  0.042683  0.040498  0.000000\n",
-       "                        f1         0.070175  0.072351  0.070081  0.000000\n",
+       "                                             0         1         2         3\n",
+       "amazon   fraudar 100.0 0.7 precision  0.079254  0.076923  0.093702  0.090909\n",
+       "                           recall     0.280992  0.228070  0.255230  0.270463\n",
+       "                           f1         0.123636  0.115044  0.137079  0.136079\n",
+       "                       0.9 precision  0.079254  0.076923  0.093702  0.090909\n",
+       "                           recall     0.255639  0.213115  0.243028  0.259386\n",
+       "...                                        ...       ...       ...       ...\n",
+       "epinions sg      400.0 0.7 recall     0.008917  0.006536  0.009112  0.007463\n",
+       "                           f1         0.004859  0.003992  0.005739  0.004658\n",
+       "                       0.9 precision  0.003340  0.002874  0.004188  0.003386\n",
+       "                           recall     0.008403  0.005917  0.008214  0.006667\n",
+       "                           f1         0.004780  0.003868  0.005548  0.004491\n",
        "\n",
-       "[288 rows x 4 columns]"
+       "[177 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -274,7 +286,7 @@
     "th_dict = {\n",
     "    \"fraudar\": 0.5,\n",
     "    \"rsd\": 1.2,\n",
-    "    \"rev2\": 0.1,\n",
+    "    \"rev2\": 0.09,\n",
     "    \"fbox\": 0.5,\n",
     "    \"sg\": 0.5,\n",
     "}\n",
@@ -288,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -333,25 +345,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>baseline-0.5</th>\n",
-       "      <td>0.178670</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.182297</td>\n",
-       "      <td>0.181521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>baseline-0.7</th>\n",
-       "      <td>0.175793</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.182297</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.003447</td>\n",
+       "      <td>0.003447</td>\n",
+       "      <td>0.003447</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.9</th>\n",
-       "      <td>0.175793</td>\n",
-       "      <td>0.175793</td>\n",
-       "      <td>0.178670</td>\n",
-       "      <td>0.175793</td>\n",
+       "      <td>0.003447</td>\n",
+       "      <td>0.003447</td>\n",
+       "      <td>0.003447</td>\n",
+       "      <td>0.003447</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -359,18 +364,17 @@
       ],
       "text/plain": [
        "budget           100.0     200.0     300.0     400.0\n",
-       "baseline-0.5  0.178670  0.181521  0.182297  0.181521\n",
-       "baseline-0.7  0.175793  0.181521  0.181521  0.182297\n",
-       "baseline-0.9  0.175793  0.175793  0.178670  0.175793"
+       "baseline-0.7       NaN  0.003447  0.003447  0.003447\n",
+       "baseline-0.9  0.003447  0.003447  0.003447  0.003447"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"sg\", data=\"otc\", met=\"precision\")"
+    "get_alg_data_met(df_met, alg=\"sg\", data=\"epinions\", met=\"precision\")"
    ]
   }
  ],
