--- a/src/ilp_large.ipynb
+++ b/src/ilp_large.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,32 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"sg\", \"fbox\"][:4]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][2:3]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:2]\n",
     "budget_list = [1000.0, 2000.0, 3000.0, 4000.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../res/ilp_large/rev2-amazon/4000.0-0.2.pkl\n",
-      "../res/ilp_large/rev2-amazon/4000.0-0.4.pkl\n",
-      "../res/ilp_large/rev2-amazon/4000.0-0.6.pkl\n",
-      "../res/ilp_large/rev2-amazon/4000.0-0.8.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "attack_res = {\n",
     "    (d, a, b, f): get_results(data_name=d, alg=a, attack_name=\"ilp_large\", budget=b, frac=f)\n",
@@ -120,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -165,114 +154,116 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">amazon</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">1000.0</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.081395</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>0.093702</td>\n",
-       "      <td>0.090909</td>\n",
+       "      <td>0.370558</td>\n",
+       "      <td>0.386598</td>\n",
+       "      <td>0.380682</td>\n",
+       "      <td>0.364198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.443038</td>\n",
-       "      <td>0.302326</td>\n",
-       "      <td>0.309645</td>\n",
-       "      <td>0.317992</td>\n",
+       "      <td>0.960526</td>\n",
+       "      <td>0.925926</td>\n",
+       "      <td>0.893333</td>\n",
+       "      <td>0.855072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.137525</td>\n",
-       "      <td>0.122642</td>\n",
-       "      <td>0.143868</td>\n",
-       "      <td>0.141395</td>\n",
+       "      <td>0.534799</td>\n",
+       "      <td>0.545455</td>\n",
+       "      <td>0.533865</td>\n",
+       "      <td>0.510823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.2</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.081395</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>0.093702</td>\n",
-       "      <td>0.090909</td>\n",
+       "      <td>0.357513</td>\n",
+       "      <td>0.362637</td>\n",
+       "      <td>0.353659</td>\n",
+       "      <td>0.339869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.372340</td>\n",
-       "      <td>0.270833</td>\n",
-       "      <td>0.287736</td>\n",
-       "      <td>0.299213</td>\n",
+       "      <td>0.758242</td>\n",
+       "      <td>0.687500</td>\n",
+       "      <td>0.644444</td>\n",
+       "      <td>0.619048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">4000.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.019305</td>\n",
-       "      <td>0.022654</td>\n",
-       "      <td>0.021220</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.050847</td>\n",
+       "      <td>0.051370</td>\n",
+       "      <td>0.049123</td>\n",
+       "      <td>0.035714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.036496</td>\n",
-       "      <td>0.041916</td>\n",
-       "      <td>0.038278</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.081301</td>\n",
+       "      <td>0.085227</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.062696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.280000</td>\n",
-       "      <td>0.195122</td>\n",
+       "      <td>0.202703</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.269231</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.015674</td>\n",
-       "      <td>0.018970</td>\n",
-       "      <td>0.018307</td>\n",
+       "      <td>0.042254</td>\n",
+       "      <td>0.042614</td>\n",
+       "      <td>0.040580</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.029940</td>\n",
-       "      <td>0.035533</td>\n",
-       "      <td>0.033473</td>\n",
+       "      <td>0.069930</td>\n",
+       "      <td>0.072816</td>\n",
+       "      <td>0.070529</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>228 rows × 4 columns</p>\n",
+       "<p>480 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            0         1         2         3\n",
-       "amazon fraudar 1000.0 0.0 precision  0.081395  0.076923  0.093702  0.090909\n",
-       "                          recall     0.443038  0.302326  0.309645  0.317992\n",
-       "                          f1         0.137525  0.122642  0.143868  0.141395\n",
-       "                      0.2 precision  0.081395  0.076923  0.093702  0.090909\n",
-       "                          recall     0.372340  0.270833  0.287736  0.299213\n",
-       "...                                       ...       ...       ...       ...\n",
-       "       sg      4000.0 0.6 recall     0.019305  0.022654  0.021220  0.000000\n",
-       "                          f1         0.036496  0.041916  0.038278  0.000000\n",
-       "                      0.8 precision  0.333333  0.280000  0.195122  0.000000\n",
-       "                          recall     0.015674  0.018970  0.018307  0.000000\n",
-       "                          f1         0.029940  0.035533  0.033473  0.000000\n",
+       "                                           0         1         2         3\n",
+       "alpha fraudar 1000.0 0.0 precision  0.370558  0.386598  0.380682  0.364198\n",
+       "                         recall     0.960526  0.925926  0.893333  0.855072\n",
+       "                         f1         0.534799  0.545455  0.533865  0.510823\n",
+       "                     0.2 precision  0.357513  0.362637  0.353659  0.339869\n",
+       "                         recall     0.758242  0.687500  0.644444  0.619048\n",
+       "...                                      ...       ...       ...       ...\n",
+       "otc   sg      4000.0 0.6 recall     0.050847  0.051370  0.049123  0.035714\n",
+       "                         f1         0.081301  0.085227  0.083333  0.062696\n",
+       "                     0.8 precision  0.202703  0.250000  0.269231  0.000000\n",
+       "                         recall     0.042254  0.042614  0.040580  0.000000\n",
+       "                         f1         0.069930  0.072816  0.070529  0.000000\n",
        "\n",
-       "[228 rows x 4 columns]"
+       "[480 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -282,7 +273,7 @@
    "source": [
     "th_dict = {\n",
     "    \"fraudar\": 0.5,\n",
-    "    \"rsd\": 1.97,\n",
+    "    \"rsd\": 1.2,\n",
     "    \"rev2\": 0.1,\n",
     "    \"fbox\": 0.5,\n",
     "    \"sg\": 0.5,\n",
@@ -297,20 +288,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_alg_data_met(df_met, alg=\"rev2\", data=\"alpha\", met=\"f1\"):\n",
     "    df_met.index = df_met.index.set_names([\"data\", \"algo\", \"budget\", \"frac\", \"metrics\"])\n",
-    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)]#.droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
+    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
     "    rdf.index = [f\"baseline-{i}\" if i > 0 else \"no-attack\" for i in rdf.index]\n",
     "    return rdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -326,17 +317,13 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"4\" halign=\"left\">0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th>budget</th>\n",
        "      <th>1000.0</th>\n",
        "      <th>2000.0</th>\n",
@@ -347,60 +334,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>no-attack</th>\n",
-       "      <td>0.287317</td>\n",
-       "      <td>0.275116</td>\n",
-       "      <td>0.275116</td>\n",
-       "      <td>0.275116</td>\n",
+       "      <td>0.625689</td>\n",
+       "      <td>0.622435</td>\n",
+       "      <td>0.622435</td>\n",
+       "      <td>0.622435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.282357</td>\n",
-       "      <td>0.264919</td>\n",
-       "      <td>0.275116</td>\n",
-       "      <td>0.275116</td>\n",
+       "      <td>0.584359</td>\n",
+       "      <td>0.541375</td>\n",
+       "      <td>0.505813</td>\n",
+       "      <td>0.471414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.282357</td>\n",
-       "      <td>0.277105</td>\n",
-       "      <td>0.277105</td>\n",
-       "      <td>0.275116</td>\n",
+       "      <td>0.536847</td>\n",
+       "      <td>0.481607</td>\n",
+       "      <td>0.433079</td>\n",
+       "      <td>0.384675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.282357</td>\n",
-       "      <td>0.282357</td>\n",
-       "      <td>0.277105</td>\n",
-       "      <td>0.277105</td>\n",
+       "      <td>0.508729</td>\n",
+       "      <td>0.430635</td>\n",
+       "      <td>0.387430</td>\n",
+       "      <td>0.326573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.282357</td>\n",
-       "      <td>0.287317</td>\n",
-       "      <td>0.276408</td>\n",
-       "      <td>0.281979</td>\n",
+       "      <td>0.475334</td>\n",
+       "      <td>0.390273</td>\n",
+       "      <td>0.335336</td>\n",
+       "      <td>0.299939</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     0                              \n",
        "budget          1000.0    2000.0    3000.0    4000.0\n",
-       "no-attack     0.287317  0.275116  0.275116  0.275116\n",
-       "baseline-0.2  0.282357  0.264919  0.275116  0.275116\n",
-       "baseline-0.4  0.282357  0.277105  0.277105  0.275116\n",
-       "baseline-0.6  0.282357  0.282357  0.277105  0.277105\n",
-       "baseline-0.8  0.282357  0.287317  0.276408  0.281979"
+       "no-attack     0.625689  0.622435  0.622435  0.622435\n",
+       "baseline-0.2  0.584359  0.541375  0.505813  0.471414\n",
+       "baseline-0.4  0.536847  0.481607  0.433079  0.384675\n",
+       "baseline-0.6  0.508729  0.430635  0.387430  0.326573\n",
+       "baseline-0.8  0.475334  0.390273  0.335336  0.299939"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"rsd\", data=\"amazon\", met=\"precision\")"
+    "get_alg_data_met(df_met, alg=\"rsd\", data=\"otc\", met=\"f1\")"
    ]
   }
  ],
