--- a/src/ilp_large.ipynb
+++ b/src/ilp_large.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"sg\", \"fbox\"][:4]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:2]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][3:]\n",
     "budget_list = [1000.0, 2000.0, 3000.0, 4000.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,116 +154,114 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
+       "      <th rowspan=\"11\" valign=\"top\">epinions</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">1000.0</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.370558</td>\n",
-       "      <td>0.386598</td>\n",
-       "      <td>0.380682</td>\n",
-       "      <td>0.364198</td>\n",
+       "      <td>0.016399</td>\n",
+       "      <td>0.018636</td>\n",
+       "      <td>0.021097</td>\n",
+       "      <td>0.022276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.960526</td>\n",
-       "      <td>0.925926</td>\n",
-       "      <td>0.893333</td>\n",
-       "      <td>0.855072</td>\n",
+       "      <td>0.170178</td>\n",
+       "      <td>0.171821</td>\n",
+       "      <td>0.202952</td>\n",
+       "      <td>0.235043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.534799</td>\n",
-       "      <td>0.545455</td>\n",
-       "      <td>0.533865</td>\n",
-       "      <td>0.510823</td>\n",
+       "      <td>0.029915</td>\n",
+       "      <td>0.033625</td>\n",
+       "      <td>0.038221</td>\n",
+       "      <td>0.040696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.2</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.357513</td>\n",
-       "      <td>0.362637</td>\n",
-       "      <td>0.353659</td>\n",
-       "      <td>0.339869</td>\n",
+       "      <td>0.016399</td>\n",
+       "      <td>0.018636</td>\n",
+       "      <td>0.021097</td>\n",
+       "      <td>0.022276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.758242</td>\n",
-       "      <td>0.687500</td>\n",
-       "      <td>0.644444</td>\n",
-       "      <td>0.619048</td>\n",
+       "      <td>0.166139</td>\n",
+       "      <td>0.163399</td>\n",
+       "      <td>0.192308</td>\n",
+       "      <td>0.220884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
-       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">4000.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.050847</td>\n",
-       "      <td>0.051370</td>\n",
-       "      <td>0.049123</td>\n",
-       "      <td>0.035714</td>\n",
+       "      <td>0.008783</td>\n",
+       "      <td>0.006369</td>\n",
+       "      <td>0.008869</td>\n",
+       "      <td>0.009662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.081301</td>\n",
-       "      <td>0.085227</td>\n",
-       "      <td>0.083333</td>\n",
-       "      <td>0.062696</td>\n",
+       "      <td>0.004839</td>\n",
+       "      <td>0.003960</td>\n",
+       "      <td>0.005690</td>\n",
+       "      <td>0.006149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.202703</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.269231</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.003340</td>\n",
+       "      <td>0.002874</td>\n",
+       "      <td>0.004188</td>\n",
+       "      <td>0.003386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.042254</td>\n",
-       "      <td>0.042614</td>\n",
-       "      <td>0.040580</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.008168</td>\n",
+       "      <td>0.005650</td>\n",
+       "      <td>0.007828</td>\n",
+       "      <td>0.006329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.069930</td>\n",
-       "      <td>0.072816</td>\n",
-       "      <td>0.070529</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.004741</td>\n",
+       "      <td>0.003810</td>\n",
+       "      <td>0.005457</td>\n",
+       "      <td>0.004412</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>480 rows × 4 columns</p>\n",
+       "<p>240 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           0         1         2         3\n",
-       "alpha fraudar 1000.0 0.0 precision  0.370558  0.386598  0.380682  0.364198\n",
-       "                         recall     0.960526  0.925926  0.893333  0.855072\n",
-       "                         f1         0.534799  0.545455  0.533865  0.510823\n",
-       "                     0.2 precision  0.357513  0.362637  0.353659  0.339869\n",
-       "                         recall     0.758242  0.687500  0.644444  0.619048\n",
-       "...                                      ...       ...       ...       ...\n",
-       "otc   sg      4000.0 0.6 recall     0.050847  0.051370  0.049123  0.035714\n",
-       "                         f1         0.081301  0.085227  0.083333  0.062696\n",
-       "                     0.8 precision  0.202703  0.250000  0.269231  0.000000\n",
-       "                         recall     0.042254  0.042614  0.040580  0.000000\n",
-       "                         f1         0.069930  0.072816  0.070529  0.000000\n",
+       "                                              0         1         2         3\n",
+       "epinions fraudar 1000.0 0.0 precision  0.016399  0.018636  0.021097  0.022276\n",
+       "                            recall     0.170178  0.171821  0.202952  0.235043\n",
+       "                            f1         0.029915  0.033625  0.038221  0.040696\n",
+       "                        0.2 precision  0.016399  0.018636  0.021097  0.022276\n",
+       "                            recall     0.166139  0.163399  0.192308  0.220884\n",
+       "...                                         ...       ...       ...       ...\n",
+       "         sg      4000.0 0.6 recall     0.008783  0.006369  0.008869  0.009662\n",
+       "                            f1         0.004839  0.003960  0.005690  0.006149\n",
+       "                        0.8 precision  0.003340  0.002874  0.004188  0.003386\n",
+       "                            recall     0.008168  0.005650  0.007828  0.006329\n",
+       "                            f1         0.004741  0.003810  0.005457  0.004412\n",
        "\n",
-       "[480 rows x 4 columns]"
+       "[240 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -288,20 +286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_alg_data_met(df_met, alg=\"rev2\", data=\"alpha\", met=\"f1\"):\n",
     "    df_met.index = df_met.index.set_names([\"data\", \"algo\", \"budget\", \"frac\", \"metrics\"])\n",
-    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
+    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)]#.droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
     "    rdf.index = [f\"baseline-{i}\" if i > 0 else \"no-attack\" for i in rdf.index]\n",
     "    return rdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -317,13 +315,17 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>budget</th>\n",
        "      <th>1000.0</th>\n",
        "      <th>2000.0</th>\n",
@@ -334,59 +336,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>no-attack</th>\n",
-       "      <td>0.625689</td>\n",
-       "      <td>0.622435</td>\n",
-       "      <td>0.622435</td>\n",
-       "      <td>0.622435</td>\n",
+       "      <td>0.005384</td>\n",
+       "      <td>0.005829</td>\n",
+       "      <td>0.005829</td>\n",
+       "      <td>0.005829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.584359</td>\n",
-       "      <td>0.541375</td>\n",
-       "      <td>0.505813</td>\n",
-       "      <td>0.471414</td>\n",
+       "      <td>0.005327</td>\n",
+       "      <td>0.005705</td>\n",
+       "      <td>0.005645</td>\n",
+       "      <td>0.005586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.536847</td>\n",
-       "      <td>0.481607</td>\n",
-       "      <td>0.433079</td>\n",
-       "      <td>0.384675</td>\n",
+       "      <td>0.005272</td>\n",
+       "      <td>0.005586</td>\n",
+       "      <td>0.005473</td>\n",
+       "      <td>0.005364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.508729</td>\n",
-       "      <td>0.430635</td>\n",
-       "      <td>0.387430</td>\n",
-       "      <td>0.326573</td>\n",
+       "      <td>0.005217</td>\n",
+       "      <td>0.005061</td>\n",
+       "      <td>0.005311</td>\n",
+       "      <td>0.005160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.475334</td>\n",
-       "      <td>0.390273</td>\n",
-       "      <td>0.335336</td>\n",
-       "      <td>0.299939</td>\n",
+       "      <td>0.005164</td>\n",
+       "      <td>0.004962</td>\n",
+       "      <td>0.004776</td>\n",
+       "      <td>0.004605</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
+       "                     0                              \n",
        "budget          1000.0    2000.0    3000.0    4000.0\n",
-       "no-attack     0.625689  0.622435  0.622435  0.622435\n",
-       "baseline-0.2  0.584359  0.541375  0.505813  0.471414\n",
-       "baseline-0.4  0.536847  0.481607  0.433079  0.384675\n",
-       "baseline-0.6  0.508729  0.430635  0.387430  0.326573\n",
-       "baseline-0.8  0.475334  0.390273  0.335336  0.299939"
+       "no-attack     0.005384  0.005829  0.005829  0.005829\n",
+       "baseline-0.2  0.005327  0.005705  0.005645  0.005586\n",
+       "baseline-0.4  0.005272  0.005586  0.005473  0.005364\n",
+       "baseline-0.6  0.005217  0.005061  0.005311  0.005160\n",
+       "baseline-0.8  0.005164  0.004962  0.004776  0.004605"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"rsd\", data=\"otc\", met=\"f1\")"
+    "get_alg_data_met(df_met, alg=\"sg\", data=\"epinions\", met=\"f1\")"
    ]
   }
  ],
